Fixed transaction amount alignment.

--- a/src/components/Transactions/styles/TransactionItem.scss
+++ b/src/components/Transactions/styles/TransactionItem.scss
@@ -25,7 +25,6 @@
 
   .amount {
     color: red;
-    min-width: 6em;
 
     &.addition {
       color: green;
